# YAFEL

./: .gitignore  .travis.yml  CMakeLists.txt  Clean_CMakeLists.cmake  Makefile  Makefile~  README.md  common.mk  common.mk~  configure.sh  configure.sh~  todo  yafel.pc
ComputationalInelasticity/: README.md
ComputationalMethodsPlasticity/: README.md
apps/: CMakeLists.txt  Makefile  appscommon.mk
apps/2081_CG_Shell/: LinearElasticity.hpp  SimplySupportedSquare.hpp  doRuns.sh  main.cpp  thinPlate.geo
apps/AdvectDiffuse_1D/: Makefile  main.cpp
apps/Advection1D_PeriodicTimeDep/: Makefile  main.cpp
apps/Advection2D_FV/: Makefile  advect2D.cpp
apps/Advection2d_DG/: LinearAdvection.cpp  LinearAdvection.hpp  Makefile  documentation.tex  main.cpp
apps/BasicAdvection_DG/: main.cpp  mesh.geo
apps/BasicLinearElasticity/: UniaxialTension.hpp  main.cpp  mesh.geo
apps/BasicPoisson/: main.cpp  mesh.geo
apps/ElasticityWithEqualityConstriant/: LinearElasticity.hpp  main.cpp
apps/ElementColoring/: Makefile  element_coloring.cpp
apps/FiniteVolume/: CellToNodeMap.hpp  FVDofm.cpp  FVDofm.hpp  InterpolateToFaces.cpp  cell_centroids.hpp  channel.geo  face_grad.m  main.cpp
apps/HDG_Poisson/: Poisson.hpp  main.cpp
apps/Laplace_Equation/: Makefile  laplace_solver.cpp  laplace_solver_instrumented.cpp
apps/LinElas3D/: Makefile  main.cpp
apps/MeshArea/: 2x2square.geo  main.cpp
apps/NS_1/: .gitignore  ChorinMethod.cpp  ChorinMethod.hpp  Makefile  README  channel2D.geo  main.cpp
apps/PoissonSolver/: .gitignore  Makefile  Poisson.cpp  Poisson.hpp  poissonSolver.cpp  square.geo
apps/Truss2D_static/: .gitignore  Makefile  Truss2D.cpp  Truss2D.hpp  main.cpp  oneElem.geo  smalltruss.geo  trussGen.py  twoElem.geo
apps/sandbox/: Makefile  sandbox.cpp
apps/supg_learning/: main.cpp  supg_advection.hpp
apps/surface_area/: Makefile  surface_area.cpp
cmake/: get_git_hash.sh  yafel_dependencies.cmake
doc/: CompilationInstallation.tex  Introduction.tex  Makefile  YAFEL_documentation.aux  YAFEL_documentation.tex
doc/Element_Reorganization/: main.tex
doc/yafel_overview/: Makefile  example_problem.tex  main.tex  yafel_usage.tex
experimental/: Makefile  cartesian_FMM.m  heap.hpp  heap_implementation.hpp  minsquare.geo  new_tensors.cpp  sandbox.cpp  testHeap.cpp
experimental/calc_quadrature_rules/: GaussLegQuadRule.m
experimental/levelset/: Makefile  heap.hpp  heap_implementation.hpp  square.geo  test_square_grid.cpp
experimental/spatialfunc/: Makefile  try_spatialfunc.cpp
include/: fe_cpp_globals.hpp~  yafel.hpp  yafel.hpp~  yafel_config.hpp  yafel_globals.hpp  yafel_tensors.hpp  yafel_typedefs.hpp
include/PDE/: PDEBase.hpp
include/assembly/: AssemblyRequirement.hpp  CGAssembly.hpp  DGAssembly.hpp  HDGAssembly.hpp  LocalSmoothingGradient.hpp  ZZGradientRecovery.hpp
include/boundary_conditions/: DirichletBC.hpp
include/element/: BaseElement.hpp  DG_Quad.hpp  Element.hpp  Element.hpp~  ElementFactory.hpp  ElementFactory.hpp~  ElementImpl.hpp  ElementTraits.hpp  ElementType.hpp  LagrangeLine.hpp  LinHex.hpp  LinLine.hpp  LinQuad.hpp  LinQuad.hpp~  LinTet.hpp  LinTet.hpp~  LinTri.hpp  LinTri.hpp~  NullElement.hpp  ShapeFunctionUtils.hpp  element_boundary_nodes.hpp
include/fe_system/: FESystem.hpp
include/lin_alg/: FullMatrix.hpp  FullMatrix.hpp~  ILUPreconditioner.hpp  JacobiPreconditioner.hpp  LUDecomposition.hpp  LUDecomposition.hpp~  Matrix.hpp  MatrixExpression.hpp  Preconditioner.hpp  Vector.hpp  Vector.hpp~  VectorExpression.hpp  access_sparse_matrix.hpp  bcsr_spmv.hpp  bicgstab.hpp  bicgstab.hpp~  cg_solver.hpp  cg_solver.hpp~  construction_sparse_matrix.hpp  csr_sparsity_pattern.hpp  csr_spmv.hpp  matmul.hpp  mvmul.hpp  operators.hpp  sparse_bcsr.hpp  sparse_coo.hpp  sparse_coo.hpp~  sparse_csr.hpp  sparse_csr.hpp~  sparse_matrix.hpp  sparse_utils.hpp  sparsity_pattern.hpp
include/mesh/: CellFace.hpp  DGMesh.hpp  Face.hpp  GenericMesh.hpp  GmshMesh.hpp  Mesh.hpp  Mesh.hpp~  MeshGenerator.hpp  MeshIterator.hpp  MeshReader.hpp  MeshReader.hpp~  MeshTopology.hpp  RectilinearMesh.hpp  TopoFace.hpp  TopoLine.hpp  TopoPoint.hpp  mesh_typedefs.hpp
include/new_mesh/: ElementIterator.hpp  LobattoPoints1D.hpp  Mesh.hpp  mesh_typedefs.hpp
include/old_element/: DG_Quad.hpp  ElementImpl.hpp  LinLine.hpp  LinQuad.hpp
include/old_handmade_linalg/: Matrix.hpp  Vector.hpp  VectorExpression.hpp  access_sparse_matrix.hpp  bcsr_spmv.hpp  cg_solver.hpp  construction_sparse_matrix.hpp  csr_sparsity_pattern.hpp  csr_spmv.hpp  matmul.hpp  mvmul.hpp  operators.hpp  sparse_bcsr.hpp  sparse_coo.hpp  sparse_csr.hpp
include/output/: HDFBackend.hpp  MatrixVisualization.hpp  OutputBackend.hpp  OutputData.hpp  OutputFrame.hpp  OutputMesh.hpp  SimulationOutput.hpp  VTKDGMesh.hpp  VTKMesh.hpp  VTKMesh.hpp~  VTKObject.hpp  VTKObject.hpp~  VTKOutput.hpp  VTKOutput.hpp~  VTKScalarData.hpp  VTKScalarData.hpp~  VTKTensorData.hpp  VTKTensorData.hpp~  VTKTimeOutput.hpp  VTKVectorData.hpp  VTKVectorData.hpp~  VTUBackend.hpp
include/quadrature/: QuadratureRule.hpp
include/time_integration/: DGRK4.hpp
include/utils/: BasicTimer.hpp  CG_DoFManager.hpp  ConcurrentQueue.hpp  DG_DoFManager.hpp  DirBC.hpp  DoFManager.hpp  (+15 more)
src/: Makefile  Makefile~  yafel_config.cpp.in
test/: Makefile  highOrderMesh.geo  matmul_performance.cpp  minsquare.geo  minsquare.msh  square.geo  square.msh  test_DG_Quad.cpp  test_DualNumber.cpp  test_GaussLegQuadrature.cpp  test_GaussLobQuadrature.cpp  test_GmshMesh.cpp  test_ILU.cpp  test_LU.cpp  test_LagrangeLine.cpp  test_LinQuadElement.cpp  test_LinTetElement.cpp  test_LinTriElement.cpp  test_MatrixVisualization.cpp  test_MeshTopology.cpp  test_RectilinearMesh.cpp  test_bcsr_spmv.cpp  test_bicgstab_solve.cpp  test_cg_solve.cpp  test_csr_spmv.cpp  test_dg_dofmanager.cpp  test_matmul.cpp  test_matrixTest.cpp  test_mesh_faces.cpp  test_mesh_generate.cpp  test_mesh_minlength.cpp  test_mesh_reorder_rcm.cpp  test_sparse_bcsr.cpp  test_sparse_coo.cpp  test_sparse_csr.cpp  test_tensor.cpp  test_topoStructures.cpp  test_vectorTest.cpp  test_vtktimeoutput.cpp
(+195 files in other folders)
